Fixed Scaling, Added jQuery Local
* Mirror image now works
* jQuery file added for local work offline
* Fixed scaling to work off a single variable
* Added titles and comments

--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,9 @@ canvas {
   display: block;
   border: 1px solid #eee;
   margin: 0 auto;
+  image-rendering: -moz-crisp-edges;
+  image-rendering: -webki-crisp-edges;
+  image-rendering: pixelated;
 }
 
 .veil-container {
